Solve all displayed problems